--- a/formulario.html
+++ b/formulario.html
@@ -2,8 +2,33 @@
 <html>
     <head>
         <title>Formulario</title>
+        <meta charset="UTF-8">
     </head>
-    <body>
-        
+    <body >
+        <form action="url" method="POST">
+            <p> Nombre
+                <input type="text" name="usuario" autofocus required/>
+                <br/>
+                Contreseña
+                <input type="password" name="contraseña"/>
+                <br/>
+                Sexo
+                <br/>
+                Hombre
+                <input type="radio" name="sexo" value="male"/>
+                Mujer
+                <input type="radio" name="sexo" value="female"/>
+                <br/>
+                Cursos
+                <br/>
+                Java
+                <input type="checkbox" name="catedra"/>
+                <br/>
+                CScharp
+                <input type="checkbox" name="catedra"/>
+                <br/>
+                <input type="submit" value="enviar"/>
+            </p>
+        </form>
     </body>  
 </html>
