--- a/formulario.html
+++ b/formulario.html
@@ -6,29 +6,50 @@
     </head>
     <body >
         <form action="url" method="POST">
-            <p> Nombre
-                <input type="text" name="usuario" autofocus required/>
-                <br/>
-                Contreseña
-                <input type="password" name="contraseña"/>
-                <br/>
-                Sexo
-                <br/>
+            <label>
+                Nombre
+            </label>
+            <input type="text" name="usuario" autofocus required "/>
+            </br>
+            <label>
+                Email
+            </label>
+            <input type="text" name="email" placeholder="email@examle.com" required/>
+            </br>
+            <label>
+                Contraseña
+            </label>
+            <input type="password" nane="contraseña" required/>
+            
+            <label>
+                sexo
+            </label>
+            <br/>
+            <label>
                 Hombre
-                <input type="radio" name="sexo" value="male"/>
+            </label>
+            <input type="radio" name="sexo" value="male"/>
+            <label>
                 Mujer
-                <input type="radio" name="sexo" value="female"/>
-                <br/>
+            </label>
+            <input type="radio" name="sexo" value="female"/>
+            <br/>
+            <label>
                 Cursos
-                <br/>
+            </label>
+            <br/>
+            <label>
                 Java
-                <input type="checkbox" name="catedra"/>
-                <br/>
-                CScharp
-                <input type="checkbox" name="catedra"/>
-                <br/>
-                <input type="submit" value="enviar"/>
-            </p>
-        </form>
+            </label>
+            <input type="checkbox" name="catedra"/>
+            <br/>
+            <label>
+                CSharp
+            </label>
+            <input type="checkbox" name="catedra"/>
+            <br/>
+            <input type="submit" value="enviar"/>
+        
+    </form>
     </body>  
 </html>
