--- a/sobre_mi.html
+++ b/sobre_mi.html
@@ -6,22 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hacerca de mi</title>
     <link rel="icon" href="icon/usuario.png">
+    <link rel="stylesheet" href="css/styleSobremi.css">
 </head>
-<body bgcolor="#66fcf1"> 
-    <!--Colocar mi fotografia-->
-    <center>
+<body>
+    <section>
+        <!--Colocar mi fotografia-->
         <img src="icon/avatar.png" 
         atl="Oscar Bautista Gaytan - Fotografia"
         width="20%"
         height="20%">
-    </center>
-    <h2 align="center"> Presentación</h2>
-    <p><big><b>Nombre: </b><strong>Oscar Bautista Gaytan</strong></big></p>
-    <p><big><b>Edad: 20 años</b></big></p>
-    <p><big><b>Sexo: Masculino</b></big></p>
-    <p><big><b>Fecha de nacimiento:  26 de abril del 2000</b></big></p>
-    <p><big><b>Nacionalidad: Mexicana</b></big></p>
-    <p><big><b>E-mail: oscar04262000@gmail.com</b></big></p>
-    <p><big><b>Estudiante en Ingenieria en Desarrollo de Software</b></big></p>
+        <h2> Presentación</h2>
+        <p><b>Nombre: </b><strong>Oscar Bautista Gaytan</strong></p>
+        <p><b>Edad: 20 años</b></p>
+        <p><b>Sexo: Masculino</b></p>
+        <p><b>Fecha de nacimiento:  26 de abril del 2000</b></p>
+        <p><b>Nacionalidad: Mexicana</b></p>
+        <p><b>E-mail: oscar04262000@gmail.com</b></p>
+        <p><b>Estudiante en Ingenieria en Desarrollo de Software</b></p>
+    </section>
 </body>
 </html>
