modificamos el tipo de funte de nuestra pagina web con css

--- a/sobre_mi.html
+++ b/sobre_mi.html
@@ -10,19 +10,22 @@
 </head>
 <body>
     <section>
-        <!--Colocar mi fotografia-->
-        <img src="icon/avatar.png" 
-        atl="Oscar Bautista Gaytan - Fotografia"
-        width="20%"
-        height="20%">
-        <h2> Presentación</h2>
-        <p><b>Nombre: </b><strong>Oscar Bautista Gaytan</strong></p>
-        <p><b>Edad: 20 años</b></p>
-        <p><b>Sexo: Masculino</b></p>
-        <p><b>Fecha de nacimiento:  26 de abril del 2000</b></p>
-        <p><b>Nacionalidad: Mexicana</b></p>
-        <p><b>E-mail: oscar04262000@gmail.com</b></p>
-        <p><b>Estudiante en Ingenieria en Desarrollo de Software</b></p>
+        <fieldset>
+            <legend>Datos personales</legend>
+            <!--Colocar mi fotografia-->
+            <img src="icon/avatar.png" 
+            atl="Oscar Bautista Gaytan - Fotografia"
+            width="20%"
+            height="20%">
+            <h2> Presentación</h2>
+            <p><b>Nombre: </b><strong>Oscar Bautista Gaytan</strong></p>
+            <p><b>Edad: 20 años</b></p>
+            <p><b>Sexo: Masculino</b></p>
+            <p><b>Fecha de nacimiento:  26 de abril del 2000</b></p>
+            <p><b>Nacionalidad: Mexicana</b></p>
+            <p><b>E-mail: oscar04262000@gmail.com</b></p>
+            <p><b>Estudiante en Ingenieria en Desarrollo de Software</b></p>
+        </fieldset>
     </section>
 </body>
 </html>
