segunda revision para subir a servidor con datos personales

--- a/sobre_mi.html
+++ b/sobre_mi.html
@@ -22,9 +22,11 @@
             <p><b>Edad: 20 años</b></p>
             <p><b>Sexo: Masculino</b></p>
             <p><b>Fecha de nacimiento:  26 de abril del 2000</b></p>
+            <!--Lugar de nacimiento-->
             <p><b>Nacionalidad: Mexicana</b></p>
             <p><b>E-mail: oscar04262000@gmail.com</b></p>
             <p><b>Estudiante en Ingenieria en Desarrollo de Software</b></p>
+            <!--Lugar  de nacimiento color -+, signo musica , comida, comida que no me gusta- mascota y como se llama lugar favorito para ir de viaje, temporada favorita, hobbit cosas sobre mi -->
         </fieldset>
     </section>
 </body>
