modificamos la tabla de objetivos con estilos css al igual que el resto de parrafos

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <!--3 seccion lo principal de mi web-->
         <section>
             <hr width="100%" />
-            <h2>Presentación</h2>
+            <h3>Presentación</h3>
             <p class="texto">
                  Hola soy Oscar Bautista  Gaytan, estudiante de Ingeniería en desarrollo 
                 de Software actualmente curso el sexto semestre.
@@ -81,21 +81,21 @@
                 Nunca terminamos de aprender y mis objetivos van cambiando buscando nuevos caminos que me ayuden a mi desarrollo profesional
             </p>
         
-            <table border="2" align="center">
+            <table align="center">
                 <tr>
-                    <td colspan="2" bgcolor="red">
+                    <td class="centro" colspan="2">
                         <b>
                             Objetivos
                         </b>
                     </td>
                 </tr>
                 <tr>    
-                    <td bgcolor="blue"> Diseño web</td>
-                    <td bgcolor="blue">Programación</td>
+                    <td> Diseño web</td>
+                    <td>Programación</td>
                 </tr>
                 <tr>
                     <td>HTML5</td>
-                    <td>Python</td>
+                    <td rowspan="3" class="middle">Python</td>
                 </tr>
                 <tr>
                     <td>CSS3</td>
