agregamos text-shadow ala pagina principal y cambiamos la tipografia de acerca de mi

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <!-- 1.- Cabezera de mi pagina web-->
         <header>
             <h1 class="titulo">
-                Portafolio Digital de Programador
+                portafolio digital de programador
             </h1> 
             <h2 class="tituloNom">
-                Oscar Bautista Gaytan
+                oscar bautista gaytan
             </h2>
         </header>
         
