--- a/sobre_mi.html
+++ b/sobre_mi.html
@@ -18,14 +18,14 @@
             width="20%"
             height="20%">
             <h2> Presentación</h2>
-            <p><b>Nombre: </b><strong>Oscar Bautista Gaytan</strong></p>
-            <p><b>Edad: 20 años</b></p>
-            <p><b>Sexo: Masculino</b></p>
-            <p><b>Fecha de nacimiento:  26 de abril del 2000</b></p>
+            <p>Nombre: <strong>Oscar Bautista Gaytan</strong></p>
+            <p>Edad: 20 años</p>
+            <p>Sexo: Masculino</p>
+            <p>Fecha de nacimiento:  26 de abril del 2000</p>
             <!--Lugar de nacimiento-->
-            <p><b>Nacionalidad: Mexicana</b></p>
-            <p><b>E-mail: oscar04262000@gmail.com</b></p>
-            <p><b>Estudiante en Ingenieria en Desarrollo de Software</b></p>
+            <p>Nacionalidad: Mexicana</p>
+            <p>E-mail: oscar04262000@gmail.com</p>
+            <p>Estudiante en Ingenieria en Desarrollo de Software</p>
             <!--Lugar  de nacimiento color -+, signo musica , comida, comida que no me gusta- mascota y como se llama lugar favorito para ir de viaje, temporada favorita, hobbit cosas sobre mi -->
         </fieldset>
     </section>
