--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
         <!-- 2.- Barra de navegación de mi pagina web-->
         <nav>
             <!--a qui va mi barra de navegacion-->
-            <a href="sobre_mi.html" target="_blank"><h3 class="subtitulo">Sobre mi</h3></a>
-            <a href="#presentacion"><h2>Presentación</h2></a>
-            <a href="#habilidades"><h2>Conocimientos</h2></a>
-            <a href="#miObjetivo"><h2>Mis objetivos</h2></a>
-            <a href="#redesSociales"><h2>Redes sociales</h2></a>
+            <ul class="circle">
+                <li><a href="sobre_mi.html" target="_blank"><h3 class="subtitulo">Sobre mi</h3></a></li>
+                <li><a href="#presentacion"><h2>Presentación</h2></a></li>
+                <li><a href="#habilidades"><h2>Conocimientos</h2></a></li>
+                <li><a href="#miObjetivo"><h2>Mis objetivos</h2></a></li>
+                <li><a href="#redesSociales"><h2>Redes sociales</h2></a></li>
+            </ul>
         </nav>
         <br/>
         
@@ -86,7 +88,7 @@
                 Nunca terminamos de aprender y mis objetivos van cambiando buscando nuevos caminos que me ayuden a mi desarrollo profesional
             </p>
         
-            <table align="center">
+            <table align="center" >
                 <tr>
                     <td class="centro" colspan="2">
                         <b>
@@ -95,8 +97,8 @@
                     </td>
                 </tr>
                 <tr>    
-                    <td> Diseño web</td>
-                    <td>Programación</td>
+                    <th> Diseño web</th>
+                    <th>Programación</th>
                 </tr>
                 <tr>
                     <td>HTML5</td>
