mejoramos caracteristicas incluyendo hora automatica, y caracteristicas css

--- a/sobre_mi.html
+++ b/sobre_mi.html
@@ -13,20 +13,21 @@
         <fieldset>
             <legend>Datos personales</legend>
             <!--Colocar mi fotografia-->
-            <img src="icon/avatar.png" 
-            atl="Oscar Bautista Gaytan - Fotografia"
-            width="20%"
-            height="20%">
-            <h2> Presentación</h2>
-            <p>Nombre: <strong>Oscar Bautista Gaytan</strong></p>
-            <p>Edad: 20 años</p>
-            <p>Sexo: Masculino</p>
-            <p>Fecha de nacimiento:  26 de abril del 2000</p>
-            <!--Lugar de nacimiento-->
-            <p>Nacionalidad: Mexicana</p>
-            <p>E-mail: oscar04262000@gmail.com</p>
-            <p>Estudiante en Ingenieria en Desarrollo de Software</p>
-            <!--Lugar  de nacimiento color -+, signo musica , comida, comida que no me gusta- mascota y como se llama lugar favorito para ir de viaje, temporada favorita, hobbit cosas sobre mi -->
+            <div>
+                <img src="icon/avatar.png" 
+                atl="Oscar Bautista Gaytan - Fotografia"
+                width="20%"
+                height="20%">
+                <h2 id="div__h2"> Presentación</h2>
+                <p>Nombre: <strong>Oscar Bautista Gaytan</strong></p>
+                <p>Edad: 20 años</p>
+                <p>Sexo: Masculino</p>
+                <p>Fecha de nacimiento:  26 de abril del 2000</p>
+                <!--Lugar de nacimiento-->
+                <p>Nacionalidad: Mexicana</p>
+                <a href="mailto:oscar04262000@gmail.com?subject=Contacto&body=Escribir">Enviar email</a>
+                <p>Estudiante en Ingenieria en Desarrollo de Software</p>
+            </div>
         </fieldset>
     </section>
 </body>
