--- a/modulos/sobre_mi.html
+++ b/modulos/sobre_mi.html
@@ -7,6 +7,7 @@
     <title>Hacerca de mi</title>
     <link rel="icon" href="icon/usuario.png">
     <link rel="stylesheet" href="css/styleSobremi.css">
+    <link rel="stylesheet"href="css/style.css">
 </head>
 <body>
     <section>
