agregamos un elemento responsivo

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
     <head>
         <link rel="stylesheet" href="vistas/css/style.css"/>
-        <link rel="icon" href="icon/carpeta.png">
+        <link rel="icon" href="modulos/icon/carpeta.png">
         <title>Portafolio digital</title>
         <meta charset="UTF-8">
         <meta name="title" content="Portafolio Digital Programador"/>
@@ -102,9 +102,29 @@
                     </tr>
                 </table>
             </section>
+            <section>
+                <p>En mis tiempos libres me gusta estudiar sobre temas de programación al igual que practicarlos
+                   tambien tengo otras actividades en mi tiempo libre, como dibujar, leer y ver series.
+                </p>
+                <p>
+                    La programación es de una de mis mayores aficiones ya que es un área en la que me gustaria
+                    dedicarme, estudio en diferentes plataformas gratuitas y de pago, una de ellas es SoloLearn y Udemy.
+                    A qui alguas insignias que consegui como parte de mis esudios.
+                </p>
+
+                <div class="contenedor_img">
+                    <div class="galeria">
+                        <img src="https://dl.dropboxusercontent.com/s/6abgmchd9ac0qfj/HTML_certificate.jpg" alt="certificado-sololearm" title="programacion-sololearm">
+                    </div>
+                    <div class="galeria">
+                        <img src="https://dl.dropboxusercontent.com/s/o8if6u9grte1ows/PHP_certificate.jpg?dl=0" alt="certificado-sololearm" title="programacion-sololearm">
+                    </div>
+                </div>
+            </section>
         </article> 
         </br>
-
+        
+        <!--Pie de pagina-->
         <footer>
             <nav class="nav__contacto">
                 <h3 class="subtitulo" id="redesSociales">Redes Sociales</h3>
