Colocamos imagenes responsive con la etiqueta picture

--- a/index.html
+++ b/index.html
@@ -133,10 +133,18 @@
             <nav class="nav__contacto">
                 <h3 class="subtitulo" id="redesSociales">Redes Sociales</h3>
                 <a href="https://github.com/oscar-BG" target="_blank">
-                    <img src="modulos/icon/github.png" alt="icono de GitHub" width="10%" height="10%" />
+                    <picture>
+                        <source media="(min-width: 1000px)" srcset="modulos/icon/github-150.png">
+                        <source media="(min-width: 200px)" srcset="modulos/icon/github-250.png">
+                        <img src="modulos/icon/github-250.png" alt="cuenta">
+                    </picture>
                 </a>
                 <a href="https://www.facebook.com/Ingenieros-en-Software-102111935247104" target="_blank">
-                    <img src="https://img.icons8.com/color/48/000000/facebook.png" alt="icono de facebook" width="10%" height="10%"/>
+                    <picture>
+                        <source media="(min-width: 1000px)" srcset="modulos/icon/facebook-150.png">
+                        <source media="(min-width: 200px)" srcset="modulos/icon/facebook-250.png">
+                        <img src="modulos/icon/github-250.png" alt="cuenta">
+                    </picture>
                 </a>
             </nav>
 
