modificamos el archivo sobre mi, junto con los estilos css

--- a/modulos/sobre_mi.html
+++ b/modulos/sobre_mi.html
@@ -11,8 +11,6 @@
 </head>
 <body>
     <section>
-        <fieldset>
-            <legend>Datos personales</legend>
             <!--Colocar mi fotografia-->
             <div>
                 <img src="icon/avatar.png" 
@@ -20,16 +18,15 @@
                 width="20%"
                 height="20%">
                 <h2 id="div__h2"> Presentación</h2>
-                <p>Nombre: <strong>Oscar Bautista Gaytan</strong></p>
-                <p>Edad: 20 años</p>
-                <p>Sexo: Masculino</p>
-                <p>Fecha de nacimiento:  26 de abril del 2000</p>
+                <p><b>Nombre: </b>Oscar Bautista Gaytan</p>
+                <p><b>Edad: </b>20 años</p>
+                <p><b>Sexo:</b> Masculino</p>
+                <p><b>Fecha de nacimiento:</b>  26 de abril del 2000</p>
                 <!--Lugar de nacimiento-->
-                <p>Nacionalidad: Mexicana</p>
+                <p><b>Nacionalidad:</b> Mexicana</p>
                 <a href="mailto:oscar04262000@gmail.com?subject=Contacto&body=Escribir">Enviar email</a>
                 <p>Estudiante en Ingenieria en Desarrollo de Software</p>
             </div>
-        </fieldset>
     </section>
 </body>
 </html>
