estructura del blog

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <h3 id="presentacion">Presentación</h3>
                 <p>
                     Hola soy <strong>Oscar Bautista  Gaytan</strong>, estudiante de Ingeniería en desarrollo 
-                    de Software actualmente curso el sexto semestre.
+                    de Software actualmente curso el septimo semestre.
                 </p>
                 <p>
                     Mis pasatiempos favoritos son las tecnologias de programación.
