Agregamos propiedades flex y actualizacion de la pagina

--- a/index.html
+++ b/index.html
@@ -50,30 +50,42 @@
                 </br>
         
                 <h3 id="habilidades">Conocimientos</h3>
-                <div>
-                    <div>
-                        <strong>C# </strong><progress min="0" max="100" value="30"></progress>
+                <div class="contenedor_con">
+                    <div class="conocimientos">
                         <img src="https://img.icons8.com/color/48/000000/c-sharp-logo.png"/>
+                        <strong>C# </strong><progress min="0" max="100" value="30"></progress>
                     </div>
-                    <div>
-                        <strong>Java SE</strong> <progress min="0" max="100" value="30"></progress>
+                    <div class="conocimientos">
                         <img src="https://img.icons8.com/dusk/64/000000/java-coffee-cup-logo.png"/>
+                        <strong>Java SE</strong> <progress min="0" max="100" value="30"></progress>
                     </div>
-                    <div>
-                        <strong>Sql server </strong><progress min="0" max="100" value="30"></progress>
+                    <div class="conocimientos">
                         <img src="https://img.icons8.com/plasticine/100/000000/add-database.png"/>
+                        <strong>Sql server </strong><progress min="0" max="100" value="30"></progress>
                     </div>
-                    <div>
-                        <strong>MySQL</strong> <progress min="0" max="100" value="30"></progress>
+                    <div class="conocimientos">
                         <img src="https://img.icons8.com/ios-filled/50/000000/mysql-logo.png"/>
+                        <strong>MySQL</strong> <progress min="0" max="100" value="30"></progress>
                     </div>
-                    <div>
-                        <strong>Git</strong> <progress min="0" max="100" value="30"></progress>
+                    <div class="conocimientos">
                         <img src="https://img.icons8.com/color/48/000000/git.png"/>
+                        <strong>Git</strong> <progress min="0" max="100" value="30"></progress>
                     </div>
-                    <div>
-                        <strong>GitHub</strong><progress min="0" max="100" value="30"></progress>
+                    <div class="conocimientos">
                         <img src="https://img.icons8.com/ios-filled/50/000000/github.png"/>
+                        <strong>GitHub</strong><progress min="0" max="100" value="30"></progress>
+                    </div>
+                    <div class="conocimientos">
+                        <img src="https://img.icons8.com/officel/48/000000/php-logo.png"/>
+                        <strong>PHP</strong><progress min="0" max="100" value="30"></progress>
+                    </div>
+                    <div class="conocimientos">
+                        <img src="https://img.icons8.com/color/48/000000/html-5--v1.png"/>
+                        <strong>HTML5</strong><progress min="0" max="100" value="30"></progress>
+                    </div>
+                    <div class="conocimientos">
+                        <img src="https://img.icons8.com/color/48/000000/css3.png"/>
+                        <strong>CSS3</strong><progress min="0" max="100" value="30"></progress>
                     </div>
                 </div>
                 </br>
@@ -91,14 +103,11 @@
                         <th>Programación</th>
                     </tr>
                     <tr>
-                        <td>HTML5</td>
+                        <td>Bootstrap</td>
                         <td rowspan="3" class="middle">Python</td>
                     </tr>
                     <tr>
-                        <td>CSS3</td>
-                    </tr>
-                    <tr>
-                        <td>java script</td>
+                        <td>JavaScript</td>
                     </tr>
                 </table>
             </section>
@@ -118,6 +127,9 @@
                     </div>
                     <div class="galeria">
                         <img src="https://dl.dropboxusercontent.com/s/o8if6u9grte1ows/PHP_certificate.jpg?dl=0" alt="certificado-sololearm" title="programacion-sololearm">
+                    </div>
+                    <div class="galeria">
+                       <img src="https://dl.dropboxusercontent.com/s/fbdezszr6k5mzcg/HTML5.jpg?dl=0" alt="">
                     </div>
                 </div>
             </section>
