--- a/modulos/blog.html
+++ b/modulos/blog.html
@@ -9,21 +9,35 @@
 </head>
 <body>
     <header>
-        <h1 class="titulo">Mi blog de programación</h1>
-        <h2 class="titulo">Oscar Bautista Gaytan</h2>
+        <div class="centrar">
+            <h1 class="titulo">  Mi blog de programación  </Mi></h1>
+            <h2 class="titulo"> Oscar Bautista Gaytan</h2>
+        </div>
+        <div class="c-sharp">
+            <img src="icon/c-sharp.png" alt="">
+        </div>
+        <div class="java">
+            <img src="icon/java.png" alt="">
+        </div>
     </header>
     <article>
         <section>
             <!-- C# -->
-            <h1 class="centrar">C#</h1>
+            <div class="centrar">
+                <h1>C#</h1>
+            </div>
         </section>
         <section>
             <!-- Java Se -->
-            <h1 class="centrar">Java Se</h1>
+            <div class="centrar">
+                <h1 class="">Java Se</h1>
+            </div>
         </section>
         <section>
             <!-- Git -->
-            <h1 class="centrar">Git</h1>
+            <div class="centrar">
+                <h1 class="centrar">Git</h1>
+            </div>
         </section>
     </article>
 </body>
